--- a/...!yt oT.html
+++ b/...!yt oT.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>...!yt oT</title>
+    <link rel="stylesheet" href="...!yt oT.html">
     <style>
         body {
             margin: 0;
