--- a/Linkowo.html
+++ b/Linkowo.html
@@ -52,12 +52,12 @@
     <h1>LISTA LINKÓW:</h1>
 
     <!-- Linki w prostokątach -->
-    <a href="file:///C:/Users/Lenovo/Desktop/graffiti/strona/Wpisywanie%20hase%C5%82.html" class="link-box">Wpisywanie haseł</a>
-    <a href="file:///C:/Users/Lenovo/Desktop/graffiti/strona/trzy%20znaki%20zapytania.html" class="link-box">???</a>
-    <a href="file:///C:/Users/Lenovo/Desktop/graffiti/strona/Marzenia%20si%C4%99%20spe%C5%82niaj%C4%85!.html" class="link-box">"Marzenia się spełniają!"</a>
-    <a href="file:///C:/Users/Lenovo/Desktop/graffiti/strona/%C5%9Awietna%20robota!.html" class="link-box">"Świetna robota"</a>
-    <a href="file:///C:/Users/Lenovo/Desktop/graffiti/strona/...!yt%20oT.html" class="link-box">"...!yt oT"</a>
-    <a href="file:///C:/Users/Lenovo/Desktop/graffiti/strona/Zagubiona%20przesy%C5%82ka.html" class="link-box">Zagubiona przesyłka</a>
-    <a href="file:///C:/Users/Lenovo/Desktop/graffiti/strona/%E2%82%B1%E2%B1%A4%E2%B1%AB%C9%86%E2%82%AD%E2%B1%A0%C4%98%E2%82%AE%C9%8E%20%E2%B1%A0%C5%82%E2%82%A6%E2%82%AD.html" class="link-box">₱ⱤⱫɆ₭ⱠĘ₮Ɏ Ⱡł₦₭</a>
+    <a href="./Wpisywanie%20haseł.html" class="link-box">Wpisywanie haseł</a>
+    <a href="./trzy%20znaki%20zapytania.html" class="link-box">???</a>
+    <a href="./Marzenia%20się%20spełniają!.html" class="link-box">"Marzenia się spełniają!"</a>
+    <a href="./Świetna%20robota!.html" class="link-box">"Świetna robota"</a>
+    <a href="./...!yt%20oT.html" class="link-box">"...!yt oT"</a>
+    <a href="./Zagubiona%20przesyłka.html" class="link-box">Zagubiona przesyłka</a>
+    <a href="./₱ⱤⱫɆ₭ⱠĘ₮Ɏ%20Ⱡł₦₭.html" class="link-box">₱ⱤⱫɆ₭ⱠĘ₮Ɏ Ⱡł₦₭</a>
 </body>
 </html>
