--- a/Linkowo.html
+++ b/Linkowo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L𝕚𝕟𝕜owo</title>
+    <link rel="stylesheet" href="../style.css"> <!-- Względna ścieżka do pliku CSS -->
     <style>
         /* Stylowanie ciała strony */
         body {
