Update Marzenia się spełniają!.html

--- a/Marzenia się spełniają!.html
+++ b/Marzenia się spełniają!.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marzenia się spełniają!</title>
+    <link rel="stylesheet" href="Marzenia się spełniają!.html"> <!-- Względna ścieżka do pliku CSS -->
     <style>
         /* Styl ciała strony */
         body {
