--- a/Nie umawaj się z diabłem.html
+++ b/Nie umawaj się z diabłem.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nie umawiaj się z diabłem</title>
+     <link rel="stylesheet" href="Nie umawaj się z diabłem.html"> <!-- Względna ścieżka do zewnętrznego pliku CSS -->
     <style>
         body {
             margin: 0;
