--- a/Przejście do wymiaru lustra.html
+++ b/Przejście do wymiaru lustra.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Przejście do trybu lustra</title>
+    <link rel="stylesheet" href="Przejście do wymiaru lustra.html"> <!-- Względna ścieżka do zewnętrznego pliku CSS -->
     <style>
         body {
             display: flex;
