--- a/Szyfr cezara.html
+++ b/Szyfr cezara.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Szyfr cezara</title>
+    <link rel="stylesheet" href="Szyfr cezara.html"> <!-- Względna ścieżka do zewnętrznego pliku CSS -->
     <style>
         body {
             margin: 0;
