Update Przejście do wymiaru lustra.html

--- a/Przejście do wymiaru lustra.html
+++ b/Przejście do wymiaru lustra.html
@@ -42,6 +42,6 @@
 </head>
 <body>
     <h1>Czy na pewno chcesz przejść?</h1>
-    <a href="file:///C:/Users/Lenovo/Desktop/graffiti/strona/jadoP%20o%C5%82saH.html">Tak, przejdź</a>
+    <a href="jadoP%20o%C5%82saH.html">Tak, przejdź</a>
 </body>
 </html>
