--- a/To ty!....html
+++ b/To ty!....html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To ty!...</title>
+    <link rel="stylesheet" href="To ty!....html"> <!-- Względna ścieżka do zewnętrznego pliku CSS -->
     <style>
         body {
             margin: 0;
