--- a/WPROWADŹ HASŁO.html
+++ b/WPROWADŹ HASŁO.html
@@ -49,7 +49,7 @@
             const password = document.getElementById("password").value;
             const correctPassword = "312"; // Ustaw właściwe hasło tutaj
             if (password === correctPassword) {
-                window.location.href = "Witaj!.html"; // Adres następnej strony
+                window.location.href = "Witaj!.html"; // Adres następnej strony (relatywna ścieżka)
             } else {
                 alert("Niepoprawne hasło!");
             }
