--- a/Witaj!.html
+++ b/Witaj!.html
@@ -48,6 +48,7 @@
     <p>-warto patrzeć na pewne rzeczy z innej perspektywy...</p>
     <p>To wszystko! Miłego szukania UwU</p>
 </div>
+<a href="Linkowo.html">Przejdź do następnej strony</a> <!-- Zmieniona ścieżka na względną -->
 </body>
 </html>
 <style>
