--- a/Wpisywanie haseł.html
+++ b/Wpisywanie haseł.html
@@ -34,7 +34,7 @@
             padding: 10px;
             width: 100%;
             margin-top: 10px;
-            border: 2px solid #white;
+            border: 2px solid white;
             border-radius: 5px;
             background-color: #121212;
             color: white;
@@ -49,7 +49,7 @@
         .line {
             width: 100%;
             height: 2px;
-            background-color: #white;
+            background-color: white;
             margin: 20px 0;
         }
     </style>
@@ -69,14 +69,14 @@
 
             // Lista haseł i odpowiadających im stron
             const passwordLinks = {
-                "lustro": "file:///C:/Users/Lenovo/Desktop/graffiti/strona/Przej%C5%9Bcie%20do%20wymiaru%20lustra.html",
-                "ośmiornica": "file:///C:/Users/Lenovo/Desktop/graffiti/strona/Rze%C5%9Bnik.html",
-                "atrament": "file:///C:/Users/Lenovo/Desktop/graffiti/strona/atrament.html",
-                "27.07.1987": "file:///C:/Users/Lenovo/Desktop/graffiti/strona/YOU%20GOT%20RICKROLLED!!!.html",
-                "2017": "file:///C:/Users/Lenovo/Desktop/graffiti/strona/2017.html",
-                "ceramika": "file:///C:/Users/Lenovo/Desktop/graffiti/strona/Nie%20umawaj%20si%C4%99%20z%20diab%C5%82em.html",
-                "muszka": "file:///C:/Users/Lenovo/Desktop/graffiti/strona/muszka.html",
-                "devniwers": "file:///C:/Users/Lenovo/Desktop/graffiti/strona/devniwers.html"
+                "lustro": "Przejście_do_wymiaru_lustra.html",
+                "ośmiornica": "Rzeźnik.html",
+                "atrament": "atrament.html",
+                "27.07.1987": "YOU_GOT_RICKROLLED.html",
+                "2017": "2017.html",
+                "ceramika": "Nie_umawaj_się_z_diabłem.html",
+                "muszka": "muszka.html",
+                "devniwers": "devniwers.html"
             };
 
             // Sprawdzenie, czy wprowadzony tekst pasuje do jednego z haseł
